# beaver

./: Cargo.toml
data/map/: provinces.toml
src/: main.rs  stepping.rs  utils.rs
src/camera/: startup.rs
src/components/: mod.rs  province.rs
src/core/: components.rs  events.rs  mod.rs
src/map/: components.rs  mod.rs  province_parser.rs  resources.rs  systems.rs
src/menu/: mod.rs
src/plugins/: cursor_hovering_sprite.rs  mod.rs
src/province/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/scenes/: mod.rs  splash.rs
src/scenes/menu/: mod.rs
src/simulation/: mod.rs
src/simulation/province/: mod.rs  resources.rs  systems.rs
src/simulation/province/components/: mod.rs  province.rs
src/system/: mod.rs
src/systems/: map.rs  mod.rs  startup.rs
src/ui/: mod.rs
src/ui/map/: mod.rs
src/ui/province/: components.rs  events.rs  mod.rs  systems.rs
src/utils/: events.rs  mod.rs
src/utils/io/: mod.rs  province_parser.rs  read_file.rs  read_toml.rs
src/world/: mod.rs
